--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,8 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     depends_on:
-      - blog
+      - blog-a
+      - blog-b
     deploy:
       resources:
         limits:
@@ -18,9 +19,9 @@ services:
           cpus: '0.025'
           memory: 50M
 
-  blog:
+  blog-a:
     # build: ../../docker_file/httpd
-    image: jeonseungmin/blog:0.1.0
+    build: blog-a/
     deploy:
       mode: replicated
       replicas: 6  # https://docs.docker.com/compose/compose-file/deploy/#replicas
@@ -34,5 +35,24 @@ services:
     expose:
       - "80"
     environment:
-      - VIRTUAL_HOST=aws.google.com
+      - VIRTUAL_HOST=google.aws.com
+      - VIRTUAL_PORT=80
+
+ blog-b:
+    # build: ../../docker_file/httpd
+    build: blog-b/
+    deploy:
+      mode: replicated
+      replicas: 6  # https://docs.docker.com/compose/compose-file/deploy/#replicas
+      resources: # https://docs.docker.com/compose/compose-file/compose-file-v3/#resources
+        limits:
+          cpus: '0.02'
+          memory: 100M
+        reservations:
+          cpus: '0.01'
+          memory: 100M
+    expose:
+      - "80"
+    environment:
+      - VIRTUAL_HOST=google.aws.com
       - VIRTUAL_PORT=80
