--- a/docker/lb/config/default.conf
+++ b/docker/lb/config/default.conf
@@ -1,6 +1,6 @@
 upstream serv {
-    server blog-a:80;
-    server blog-b:80;
+    server blog-a.internal:80;
+    server blog-b.internal:80;
 }
 server {
     listen 80;
